wip: translated text

--- a/works.html
+++ b/works.html
@@ -1,112 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible content=" IE="edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title class="words">WORKS</title>
-		<meta
-			name="keywords"
-			content="landscape, design, gardening, garden, nature, green, plants, flowers"
-		/>
-		<meta name="description" content="Landscape design" />
-		<meta name="author" content="Tetiana Mykhailenko" />
-		<link rel="stylesheet" type="text/css" href="style/index.css" />
-		<link rel="stylesheet" type="text/css" href="style/works.css" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="icon" type="image/x-icon" href="cursorFlower.svg" />
-		<title>Terraflora.design</title>
-	</head>
-	<body>
-		<h1>My works</h1>
-		<section class="gallery boryspil">
-			<div class="galleryImage">
-				<img src="photo/bor/bor1.jpg" loading="lazy" alt="boryspil" />
-			</div>
-			<div class="galleryImage">
-				<img src="photo/bor/bor2.jpg" loading="lazy" alt="boryspil" />
-			</div>
-			<div class="galleryImage">
-				<img src="photo/bor/bor3.jpg" loading="lazy" alt="boryspil" />
-			</div>
-			<div class="galleryImage">
-				<img src="photo/bor/bor4.jpg" loading="lazy" alt="boryspil" />
-			</div>
-			<div class="galleryImage">
-				<img src="photo/bor/bor5.jpg" loading="lazy" alt="boryspil" />
-			</div>
-			<div class="galleryImage">
-				<img src="photo/bor/bor6.jpg" loading="lazy" alt="boryspil" />
-			</div>
-		</section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible content=" IE="edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title class="words">WORKS</title>
+    <meta name="keywords" content="landscape, design, gardening, garden, nature, green, plants, flowers" />
+    <meta name="description" content="Landscape design" />
+    <meta name="author" content="Tetiana Mykhailenko" />
+    <link rel="stylesheet" type="text/css" href="style/index.css" />
+    <link rel="stylesheet" type="text/css" href="style/works.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500&display=swap" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="cursorFlower.svg" />
+    <title>Terraflora.design</title>
+  </head>
+  <body>
+    <h1>My works</h1>
+    <section class="gallery boryspil">
+      <div class="galleryImage">
+        <img src="photo/bor/bor1.jpg" loading="lazy" alt="boryspil" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/bor/bor2.jpg" loading="lazy" alt="boryspil" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/bor/bor3.jpg" loading="lazy" alt="boryspil" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/bor/bor4.jpg" loading="lazy" alt="boryspil" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/bor/bor5.jpg" loading="lazy" alt="boryspil" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/bor/bor6.jpg" loading="lazy" alt="boryspil" />
+      </div>
+    </section>
 
-		<section class="footerCont">
-			<footer class="footer">
-				<nav>
-					<ul>
-						<li><a href="about.html">About</a></li>
-						<li><a href="works.html">Works</a></li>
-						<li><a href="services.html">Services</a></li>
-						<li><a href="contacts">Contacts</a></li>
-					</ul>
-				</nav>
+    <section class="gallery canada">
+      <div class="galleryImage">
+        <img src="photo/can/can.jpg" loading="lazy" alt="canada village" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/can/can2.jpg" loading="lazy" alt="canada village" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/can/can3.jpg" loading="lazy" alt="canada village" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/can/can4.jpg" loading="lazy" alt="canada village" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/can/can5.jpg" loading="lazy" alt="canada village" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/can/can6" loading="lazy" alt="canada village" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/can/can7" loading="lazy" alt="canada village" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/can/can8" loading="lazy" alt="canada village" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/can/can9" loading="lazy" alt="canada village" />
+      </div>
+      <div class="galleryImage">
+        <img src="photo/can/can10" loading="lazy" alt="canada village" />
+      </div>
+    </section>
 
-				<nav>
-					<ul>
-						<!-- // To create and add links -->
-						<li><a href="">Private plots</a></li>
-						<li><a href="">Latest projects</a></li>
-						<li><a href="">Commercial plots</a></li>
-						<li><a href="">Plots in different climate zones</a></li>
-					</ul>
-				</nav>
+    <section class="footerCont">
+      <footer class="footer">
+        <nav>
+          <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="works.html">Works</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contacts">Contacts</a></li>
+          </ul>
+        </nav>
 
-				<nav>
-					<ul>
-						<!-- // To create and add links -->
-						<li><a href="">Terrasing</a></li>
-						<li><a href="">Natural style</a></li>
-						<li><a href="">Devision into zones</a></li>
-						<li><a href="">Ponds and waterfalls</a></li>
-					</ul>
-				</nav>
+        <nav>
+          <ul>
+            <!-- // To create and add links -->
+            <li><a href="">Private plots</a></li>
+            <li><a href="">Latest projects</a></li>
+            <li><a href="">Commercial plots</a></li>
+            <li><a href="">Plots in different climate zones</a></li>
+          </ul>
+        </nav>
 
-				<nav>
-					<ul>
-						<!-- // To create and add links -->
+        <nav>
+          <ul>
+            <!-- // To create and add links -->
+            <li><a href="">Terrasing</a></li>
+            <li><a href="">Natural style</a></li>
+            <li><a href="">Devision into zones</a></li>
+            <li><a href="">Ponds and waterfalls</a></li>
+          </ul>
+        </nav>
 
-						<li>
-							<a
-								href="https://www.linkedin.com/in/%D1%82%D0%B0%D1%82%D1%8C%D1%8F%D0%BD%D0%B0-%D0%BC%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B5%D0%BD%D0%BA%D0%BE-25ba60a7/"
-								>LinkedIn</a
-							>
-						</li>
-						<li>
-							<a href="https://www.facebook.com/profile.php?id=100014740456848"
-								>Facebook</a
-							>
-						</li>
-						<li>
-							<a href="https://www.instagram.com/tetiana4425/">Instagram</a>
-						</li>
-					</ul>
-				</nav>
-			</footer>
-		</section>
-		<!-- <section class="latestWorks">
+        <nav>
+          <ul>
+            <!-- // To create and add links -->
+
+            <li>
+              <a href="https://www.linkedin.com/in/%D1%82%D0%B0%D1%82%D1%8C%D1%8F%D0%BD%D0%B0-%D0%BC%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B5%D0%BD%D0%BA%D0%BE-25ba60a7/">LinkedIn</a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/profile.php?id=100014740456848">Facebook</a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/tetiana4425/">Instagram</a>
+            </li>
+          </ul>
+        </nav>
+      </footer>
+    </section>
+    <!-- <section class="latestWorks">
     </section>
     <section class="seoFooter">  -->
 
-		<!-- //CTA? -->
+    <!-- //CTA? -->
 
-		<script src="works.js"></script>
-	</body>
+    <script src="works.js"></script>
+  </body>
 </html>
