wip: gallery in progress

--- a/works.html
+++ b/works.html
@@ -19,56 +19,56 @@
   <body>
     <h1>My works</h1>
     <section class="gallery boryspil">
-      <div class="galleryImage">
+      <div class="galleryImagebor galleryImage">
         <img src="photo/bor/bor1.jpg" loading="lazy" alt="boryspil" />
       </div>
-      <div class="galleryImage">
+      <div class="galleryImage galleryImage">
         <img src="photo/bor/bor2.jpg" loading="lazy" alt="boryspil" />
       </div>
-      <div class="galleryImage">
+      <div class="galleryImagebor galleryImage">
         <img src="photo/bor/bor3.jpg" loading="lazy" alt="boryspil" />
       </div>
-      <div class="galleryImage">
+      <div class="galleryImagebor galleryImage">
         <img src="photo/bor/bor4.jpg" loading="lazy" alt="boryspil" />
       </div>
-      <div class="galleryImage">
+      <div class="galleryImagebor galleryImage">
         <img src="photo/bor/bor5.jpg" loading="lazy" alt="boryspil" />
       </div>
-      <div class="galleryImage">
+      <div class="galleryImagebor galleryImage">
         <img src="photo/bor/bor6.jpg" loading="lazy" alt="boryspil" />
       </div>
     </section>
 
     <section class="gallery canada">
-      <div class="galleryImage">
+      <div class="galleryImagecan">
         <img src="photo/can/can.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImage">
+      <div class="galleryImagecan galleryImage">
         <img src="photo/can/can2.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImage">
+      <div class="galleryImagecan galleryImage">
         <img src="photo/can/can3.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImage">
+      <div class="galleryImagecan galleryImage">
         <img src="photo/can/can4.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImage">
+      <div class="galleryImagecan galleryImage">
         <img src="photo/can/can5.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImage">
-        <img src="photo/can/can6" loading="lazy" alt="canada village" />
+      <div class="galleryImagecan galleryImage">
+        <img src="photo/can/can6.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImage">
-        <img src="photo/can/can7" loading="lazy" alt="canada village" />
+      <div class="galleryImagecan galleryImage">
+        <img src="photo/can/can7.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImage">
-        <img src="photo/can/can8" loading="lazy" alt="canada village" />
+      <div class="galleryImagecan galleryImage">
+        <img src="photo/can/can8.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImage">
-        <img src="photo/can/can9" loading="lazy" alt="canada village" />
+      <div class="galleryImagecan galleryImage">
+        <img src="photo/can/can9.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImage">
-        <img src="photo/can/can10" loading="lazy" alt="canada village" />
+      <div class="galleryImagecan galleryImage">
+        <img src="photo/can/can10.jpg" loading="lazy" alt="canada village" />
       </div>
     </section>
 
