wip: added galleries to html

--- a/works.html
+++ b/works.html
@@ -18,60 +18,426 @@
   </head>
   <body>
     <h1>My works</h1>
+
+    <!--  BORYSPIL -->
     <section class="gallery boryspil">
-      <div class="galleryImagebor galleryImage">
+      <div class="galleryImageBor galleryImage">
         <img src="photo/bor/bor1.jpg" loading="lazy" alt="boryspil" />
       </div>
-      <div class="galleryImage galleryImage">
+      <div class="galleryImageBor galleryImage">
         <img src="photo/bor/bor2.jpg" loading="lazy" alt="boryspil" />
       </div>
-      <div class="galleryImagebor galleryImage">
+      <div class="galleryImageBor galleryImage">
         <img src="photo/bor/bor3.jpg" loading="lazy" alt="boryspil" />
       </div>
-      <div class="galleryImagebor galleryImage">
+      <div class="galleryImageBor galleryImage">
         <img src="photo/bor/bor4.jpg" loading="lazy" alt="boryspil" />
       </div>
-      <div class="galleryImagebor galleryImage">
+      <div class="galleryImageBor galleryImage">
         <img src="photo/bor/bor5.jpg" loading="lazy" alt="boryspil" />
       </div>
-      <div class="galleryImagebor galleryImage">
+      <div class="galleryImageBor galleryImage">
         <img src="photo/bor/bor6.jpg" loading="lazy" alt="boryspil" />
       </div>
     </section>
 
-    <section class="gallery canada">
-      <div class="galleryImagecan">
-        <img src="photo/can/can.jpg" loading="lazy" alt="canada village" />
+    <!-- CANADIAN VILLAGE  -->
+    <section class="gallery canagosadada">
+      <div class="galleryImageCan">
+        <img src="photo/can/can1.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImagecan galleryImage">
+      <div class="galleryImageCan galleryImage">
         <img src="photo/can/can2.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImagecan galleryImage">
+      <div class="galleryImageCan galleryImage">
         <img src="photo/can/can3.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImagecan galleryImage">
+      <div class="galleryImageCan galleryImage">
         <img src="photo/can/can4.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImagecan galleryImage">
+      <div class="galleryImageCan galleryImage">
         <img src="photo/can/can5.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImagecan galleryImage">
+      <div class="galleryImageCan galleryImage">
         <img src="photo/can/can6.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImagecan galleryImage">
+      <div class="galleryImageCan galleryImage">
         <img src="photo/can/can7.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImagecan galleryImage">
+      <div class="galleryImageCan galleryImage">
         <img src="photo/can/can8.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImagecan galleryImage">
+      <div class="galleryImageCan galleryImage">
         <img src="photo/can/can9.jpg" loading="lazy" alt="canada village" />
       </div>
-      <div class="galleryImagecan galleryImage">
+      <div class="galleryImageCan galleryImage">
         <img src="photo/can/can10.jpg" loading="lazy" alt="canada village" />
       </div>
     </section>
 
+    <!-- GONENYCHI  -->
+    <section class="gallery gorenychi">
+      <div class="galleryImageGor">
+        <img src="photo/gor/gor1.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+      <div class="galleryImageGor galleryImage">
+        <img src="photo/gor/gor2.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+      <div class="galleryImageGor galleryImage">
+        <img src="photo/gor/gor3.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+      <div class="galleryImageGor galleryImage">
+        <img src="photo/gor/gor4.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+      <div class="galleryImageGor galleryImage">
+        <img src="photo/gor/gor5.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+      <div class="galleryImageGor galleryImage">
+        <img src="photo/gor/gor6.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+      <div class="galleryImageGor galleryImage">
+        <img src="photo/gor/gor7.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+      <div class="galleryImageGor galleryImage">
+        <img src="photo/gor/gor8.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+    </section>
+
+    <!-- GOSTOMEL  -->
+    <section class="gallery gostomel">
+      <div class="galleryImageGos">
+        <img src="photo/gos/gos1.jpg" loading="lazy" alt="gostomel" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos2.jpg" loading="lazy" alt="gostomel" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos3.jpg" loading="lazy" alt="gostomel" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos4.jpg" loading="lazy" alt="gostomel" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos5.jpg" loading="lazy" alt="gostomel" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos6.jpg" loading="lazy" alt="gostomel" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos7.jpg" loading="lazy" alt="gostomel" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos8.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos9.jpg" loading="lazy" alt="gostomel" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos10.jpg" loading="lazy" alt="gostomel" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos11.jpg" loading="lazy" alt="gostomel" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos12.jpg" loading="lazy" alt="gostomel" />
+      </div>
+      <div class="galleryImageGos galleryImage">
+        <img src="photo/gos/gos13.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+    </section>
+
+    <!-- GROBOVYCHI  -->
+    <section class="gallery grobovychi">
+      <div class="galleryImageGro">
+        <img src="photo/gro/gro1.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro2.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro3.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro4.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro5.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro6.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro7.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro8.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro9.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro10.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro11.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro12.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro13.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro14.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+      <div class="galleryImageGro galleryImage">
+        <img src="photo/gro/gro15.jpg" loading="lazy" alt="grobovychi" />
+      </div>
+    </section>
+
+    <!-- HOTYANIVKA  -->
+    <section class="gallery hotyanivka">
+      <div class="galleryImageHot">
+        <img src="photo/hot/hot1.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot2.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot3.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot4.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot5.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot6.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot7.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot8.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot9.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot10.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot11.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot12.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot13.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot14.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+      <div class="galleryImageHot galleryImage">
+        <img src="photo/hot/hot15.jpg" loading="lazy" alt="hotyanivka" />
+      </div>
+    </section>
+
+    <!-- IRPIN  -->
+    <section class="gallery irpin">
+      <div class="galleryImageIrp">
+        <img src="photo/irp/irp1.jpg" loading="lazy" alt="irpin" />
+      </div>
+      <div class="galleryImageIrp galleryImage">
+        <img src="photo/irp/irp2.jpg" loading="lazy" alt="irpin" />
+      </div>
+      <div class="galleryImageIrp galleryImage">
+        <img src="photo/irp/irp3.jpg" loading="lazy" alt="irpin" />
+      </div>
+      <div class="galleryImageIrp galleryImage">
+        <img src="photo/irp/irp4.jpg" loading="lazy" alt="irpin" />
+      </div>
+      <div class="galleryImageIrp galleryImage">
+        <img src="photo/irp/irp5.jpg" loading="lazy" alt="irpin" />
+      </div>
+      <div class="galleryImageIrp galleryImage">
+        <img src="photo/irp/irp6.jpg" loading="lazy" alt="irpin" />
+      </div>
+      <div class="galleryImageIrp galleryImage">
+        <img src="photo/irp/irp7.jpg" loading="lazy" alt="irpin" />
+      </div>
+      <div class="galleryImageIrp galleryImage">
+        <img src="photo/irp/irp8.jpg" loading="lazy" alt="irpin" />
+      </div>
+      <div class="galleryImageIrp galleryImage">
+        <img src="photo/irp/irp9.jpg" loading="lazy" alt="irpin" />
+      </div>
+      <div class="galleryImageIrp galleryImage">
+        <img src="photo/irp/irp10.jpg" loading="lazy" alt="irpin" />
+      </div>
+    </section>
+
+    <!-- IVANKOVICHI  -->
+    <section class="gallery ivankovichi">
+      <div class="galleryImageIva">
+        <img src="photo/iva/iva1.jpg" loading="lazy" alt="ivankovichi" />
+      </div>
+      <div class="galleryImageIva galleryImage">
+        <img src="photo/iva/iva2.jpg" loading="lazy" alt="ivankovichi" />
+      </div>
+      <div class="galleryImageIva galleryImage">
+        <img src="photo/iva/iva3.jpg" loading="lazy" alt="ivankovichi" />
+      </div>
+      <div class="galleryImageIva galleryImage">
+        <img src="photo/iva/iva4.jpg" loading="lazy" alt="ivankovichi" />
+      </div>
+      <div class="galleryImageIva galleryImage">
+        <img src="photo/iva/iva5.jpg" loading="lazy" alt="ivankovichi" />
+      </div>
+    </section>
+
+    <!-- KRUKOVSHYNA  -->
+    <section class="gallery krukovshyna">
+      <div class="galleryImageKru">
+        <img src="photo/kru/kru1.jpg" loading="lazy" alt="krukovshyna" />
+      </div>
+      <div class="galleryImageKru galleryImage">
+        <img src="photo/kru/kru2.jpg" loading="lazy" alt="krukovshyna" />
+      </div>
+      <div class="galleryImageKru galleryImage">
+        <img src="photo/kru/kru3.jpg" loading="lazy" alt="krukovshyna" />
+      </div>
+      <div class="galleryImageKru galleryImage">
+        <img src="photo/kru/kru4.jpg" loading="lazy" alt="krukovshyna" />
+      </div>
+      <div class="galleryImageKru galleryImage">
+        <img src="photo/kru/kru5.jpg" loading="lazy" alt="krukovshyna" />
+      </div>
+      <div class="galleryImageKru galleryImage">
+        <img src="photo/kru/kru6.jpg" loading="lazy" alt="krukovshyna" />
+      </div>
+      <div class="galleryImageKru galleryImage">
+        <img src="photo/kru/kru7.jpg" loading="lazy" alt="krukovshyna" />
+      </div>
+      <div class="galleryImageKru galleryImage">
+        <img src="photo/kru/kru8.jpg" loading="lazy" alt="krukovshyna" />
+      </div>
+      <div class="galleryImageKru galleryImage">
+        <img src="photo/kru/kru9.jpg" loading="lazy" alt="krukovshyna" />
+      </div>
+    </section>
+
+    <!-- NETHERLANDS  -->
+    <section class="gallery netherlands">
+      <div class="galleryImageNl">
+        <img src="photo/nl/nl1.jpg" loading="lazy" alt="netherlands" />
+      </div>
+      <div class="galleryImageNl galleryImage">
+        <img src="photo/nl/nl2.jpg" loading="lazy" alt="netherlands" />
+      </div>
+      <div class="galleryImageNl galleryImage">
+        <img src="photo/nl/nl3.jpg" loading="lazy" alt="netherlands" />
+      </div>
+      <div class="galleryImageNl galleryImage">
+        <img src="photo/nl/nl4.jpg" loading="lazy" alt="netherlands" />
+      </div>
+      <div class="galleryImageNl galleryImage">
+        <img src="photo/nl/nl5.jpg" loading="lazy" alt="netherlands" />
+      </div>
+    </section>
+
+    <!-- OBUHIV  -->
+    <section class="gallery obuhiv">
+      <div class="galleryImageObh">
+        <img src="photo/obh/obh1.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh2.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh3.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh4.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh5.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh6.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh7.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh8.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh9.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh10.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh11.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh12.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh13.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+        <img src="photo/obh/obh14.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh15.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh16.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh17.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh18.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh19.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh20.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh21.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh22.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh23.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh24.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh25.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh26.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh27.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh28.jpg" loading="lazy" alt="obuhiv" />
+      </div>
+      <div class="galleryImageObh galleryImage">
+        <img src="photo/obh/obh29.jpg" loading="lazy" alt="gorenychi" />
+      </div>
+    </section>
+
+    <!-- FOOTER -->
     <section class="footerCont">
       <footer class="footer">
         <nav>
